<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >


    <ImageView
        android:id="@+id/imageBusiness"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/logouniboi"
        />


    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_alignTop="@+id/imageBusiness"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        />
    <TextView
        android:id="@+id/textWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:layout_below="@+id/textName"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textWebsite"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:typeface="normal"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        />


    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginBottom="119dp"
        android:layout_alignBottom="@+id/imageBusiness"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/textHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours_operation"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/textDescription"
        android:layout_alignRight="@+id/textDescription"
        android:layout_alignEnd="@+id/textDescription"
        android:layout_marginTop="38dp"
        />


    <TextView
        android:id="@+id/textAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
